@startuml quiz_package

class Quiz {
  Challenge[] callenges
}

class Question {
  String type
  String questionString
}

class Challenge {
   ChallengeStatus challengeStatus
   Int index
   String question
   Int[] answers
   String[] choices
   String explanation
   Int[] selectedChoices

   arrayEqual(Int[] a, Int[] b): Boolean
}

class MdFileProcessor {
  extractQuiz(content):Quiz
  partitionChallenge(content): String[]
  extractExplain(challengeRaw): String
  extractChoices(challengeRaw): String[]
  extractQuestion(challengeRaw): String
}

class GithubLinkedInSource {
}

class LocalFileSource {
}

Challenge *-- Question
Quiz o-- Challenge

LocalFileSource --> MdFileProcessor
GithubLinkedInSource --> MdFileProcessor

@enduml